--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "flask-socketio-chat"
+name = "ai-session"
 version = "1.0"
 dependencies = [
     "flask",
@@ -8,6 +8,9 @@ dependencies = [
     "eventlet",
     "gunicorn",
     "flask_smorest",
+    "lancedb",
+    "sqlalchemy",
+    "degirum"
 ]
 
 [project.optional-dependencies]
