--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,21 @@ services:
       - "5002:5002"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /home/anandas/temp/data:/data
     depends_on:
       - web
 
   web:
-    build: .
+    image: ai_sessions-web
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./app:/app
+      - /media/anandas/colan_storage/docker/ai_session:/data
     command: >
       gunicorn -k eventlet
-               -w 1 -b 0.0.0.0:5000 chat:application
-    volumes:
-      - ./:/app
-    expose:
-      - "5000"
+               -w 1 -b 0.0.0.0:5000 src:application
+    ports:
+      - "5000:5000"
 
 
