unique name based on hw

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,13 @@ services:
     volumes:
       - ./app:/app
       - /media/anandas/colan_storage/docker/ai_session:/data
+      
     command: >
       gunicorn -k eventlet
                -w 1 -b 0.0.0.0:5000 src:application
     ports:
       - "5000:5000"
+    environment:
+      - HOST_NAME=${HOSTNAME}
 
 
